cpp/test/FreezeScript/dbmap/fail/05_old.ice
module Test
{

enum E { E1, E2, E3 };

struct S1
{
    float m1;
    long m2;
    string m3;
    E m4;
};

sequence<long> Seq1;
dictionary<int, long> D1;

interface I {};

class C1 implements I
{
    long c1m1;
    long c1m2;
    long c1m3;
    long c1m4;
    long c1m5;
    long c1m6;
    long c1m7;
    long c1m8;
    long c1m9;
    long c1m10;
    long c1m11;
    long c1m12;
    long c1m13;
    long c1m14;
    long c1m15;
    long c1m16;
};

class C2 extends C1
{
    long c2m1;
    long c2m2;
    long c2m3;
    long c2m4;
    long c2m5;
    long c2m6;
    long c2m7;
    long c2m8;
    long c2m9;
    long c2m10;
    long c2m11;
    long c2m12;
    long c2m13;
    long c2m14;
    long c2m15;
    long c2m16;
};

struct S2
{
    long m1;
    long m2;
    long m3;
    long m4;
    long m5;
    long m6;
    long m7;
    long m8;
    long m9;
    long m10;
    long m11;
    long m12;
    long m13;
    long m14;
    long m15;
    long m16;
};

};
